# le-code_practice-linux

./: LICENSE.md  README.md
Practice/C#/test_2025_3_6/: .editorconfig  Program.cs
Practice/C/test_2025_3_4/: .clang-format  CMakeLists.txt
Practice/C/test_2025_3_4/src/: main.c
Practice/CPP/test_2025_1_21/: .gitignore  xmake.lua
Practice/CPP/test_2025_1_21/src/: main.cc
Practice/CPP/test_2025_1_26/: xmake.lua
Practice/CPP/test_2025_1_26/src/: main.cc
Practice/CPP/test_2025_1_28/: .gitignore  xmake.lua
Practice/CPP/test_2025_1_28/src/: main.cc  my_array.hpp
Practice/CPP/test_2025_3_2/: .gitignore  CMakeLists.txt  main.cpp
Practice/CPP/test_2025_3_2/src/: main.cc  main.cpp  my_array.h
Practice/CPP/test_2025_3_20/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  main.cpp
Practice/CPP/test_2025_3_21/: .clang-format  .gitignore  main.cpp
Practice/Java/test_2025_1_23/src/: App.java
Practice/Java/test_2025_2_6/src/: App.java
Practice/Rust/test_2025_1_22/: Cargo.toml
Practice/Rust/test_2025_1_22/src/: main.rs
practice/c#/test_2025_3_6/: .editorconfig  Program.cs  test_2025_3_6.sln
practice/c/test_2025_6_30/: .gitignore  CMakeLists.txt  main.c  test.txt  xmake.lua
practice/c/test_2025_6_30/src/: main.c
practice/cpp/test_2025_1_26/: .gitignore
practice/cpp/test_2025_1_28/: .clang-format
practice/cpp/test_2025_1_28/src/: my_array.hpp
practice/cpp/test_2025_3_21/: CMakeLists.txt  main.cpp
practice/go/test_2025_4_16/: go.mod  main.go
practice/java/test_2025_3_22/src/: App.java
practice/rust/test_2025_3_22/: Cargo.toml
(+1 files in other folders)
